# graphs_analysis

./: .gitignore  .gitmodules  README.md
boruvka/ermolovich/pregelplus/: pregel_experiment.ipynb
boruvka/ermolovich/pregelplus/pregel_mst/: msbfs.cpp
boruvka/shmakov/ApacheGiraph/: README.md  pom.xml
boruvka/shmakov/ApacheGiraph/src/main/java/org/example/: Main.java
boruvka/shmakov/ApacheGiraph/src/main/java/org/example/mst/: BoruvkaMSTComputation.java  BoruvkaMasterCompute.java  LogMstWeightMasterCompute.java
boruvka/shmakov/ApacheGiraph/src/main/java/org/example/mst/input/: LongDoubleTextEdgeInputFormat.java
boruvka/shmakov/ApacheGiraph/src/main/java/org/example/mst/messages/: MSTMessage.java
boruvka/shmakov/ApacheGiraph/src/main/java/org/example/mst/tools/: GrToMtx.java  MtxToEdgeList.java
boruvka/shmakov/ApacheGiraph/src/main/resources/: log4j.properties
boruvka/shmakov/Gunrock/: CMakeLists.txt  README.md  boruvka.cu  boruvka.hxx
boruvka/shmakov/experiment_utils/: benchmark_mst.py  benchmark_scaling.py  convert_gr_to_mtx.py
